# watchdog-core

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  requirements-dev.txt  requirements-test.txt
.github/: dependabot.yml
.github/workflows/: budget-guard.yml  ci.yml  deploy-staging.yml
api/: __init__.py  app.py  otel.py  pyproject.toml  requirements.txt
api/models/: sales_log.py
api/routes/: analyze.py  debug.py  upload.py
api/services/: __init__.py  charts.py  column_map.py  data_cleaner.py  insight_engine.py  metrics.py  metrics_sales.py  parser.py
infra/migrations/: 20250426_enable_realtime.sql
interfaces/: auth.py  llm_client.py  metrics.py  uploader.py
templates/insights/: cost_per_sale.jinja2  cost_per_sale_by_vendor.j2  cost_per_sale_by_vendor.jinja2  lead_source_roi.j2  new_vs_used.j2  new_vs_used.jinja2  sales_by_salesperson.j2  sales_by_salesperson.jinja2
tests/: __init__.py  conftest.py  fixtures.py  sample_sales.csv  test_health.py  test_insight.py  test_metrics.py  test_schema.py  test_sentry.py  test_upload.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css  tailwind.config.ts  theme.css
ui/src/components/: Chat.tsx  FileStatus.tsx  Header.tsx  InsightCard.tsx  SuggestionChip.tsx  Tabs.tsx
ui/src/lib/: realtime.ts
ui/src/pages/: Index.tsx
