[project]
name = "watchdog_core"
version = "0.0.0"
description = "AI system that converts dealership sales logs into instant insights"
readme = "../README.md"
requires-python = ">=3.12"
authors = [
    {name = "Watchdog Team"}
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I"]

[tool.pytest]
testpaths = ["../tests"]
python_files = "test_*.py"

